chore: Add Curtain